--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,8 +1,41 @@
-<h1>{{name_aplikasi}}</h1>
+{% extends 'base.html' %}
+{% block content %}
+<h1>bemostore</h1>
 
 <h5>Name: </h5>
 <p>Muhammad Fawwaz Edsa Fatin Setiawan</p> <!--Ubah sesuai dengan nama kamu -->
+
 <h5>NPM: </h5>
 <p>2306275582</p> <!-- Ubah sesuai dengan npm kamu -->
+
 <h5>Class: </h5>
 <p>PBP D</p> <!-- Ubah sesuai dengan kelas kamu -->
+
+{% if not product_entries %}
+<p>Belum ada data product pada bemostore.</p>
+{% else %}
+<table>
+  <tr>
+    <th>Product Name</th>
+    <th>Price</th>
+    <th>Description</th>
+  </tr>
+
+  {% comment %} Berikut cara memperlihatkan data product di bawah baris ini 
+  {% endcomment %} 
+  {% for product_entry in product_entries %}
+  <tr>
+    <td>{{product_entry.name}}</td>
+    <td>{{product_entry.price}}</td>
+    <td>{{product_entry.description}}</td>
+  </tr>
+  {% endfor %}
+</table>
+{% endif %}
+
+<br />
+
+<a href="{% url 'main:create_product_entry' %}">
+  <button>Add New Product Entry</button>
+</a>
+{% endblock content %}
