--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -18,6 +18,9 @@
     padding: 8px;
     text-align: left;
   }
+  th {
+    background-color: #f2f2f2;
+  }
   th:first-child, td:first-child {
     width: 20%; 
   }
