--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,63 +1,52 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block meta %}
+<title>Mental Health Tracker</title>
+{% endblock meta %}
 {% block content %}
-<h1>bemostore</h1>
+{% include 'navbar.html' %}
+<div class="overflow-x-hidden px-4 md:px-8 pb-8 pt-24 min-h-screen bg-gray-100 flex flex-col">
+  <div class="p-2 mb-6 absolute top-24 left-0 w-full">
+    <div class="relative grid grid-cols-1 md:grid-cols-3 gap-1 lg:gap-1"> <!-- Mengurangi gap antar elemen grid -->
+      <!-- Card Info -->
+      <div class="col-span-1 w-1/2 mx-auto">
+        {% include "card_info.html" with title='NPM' value=npm %}
+      </div>
+      <div class="col-span-1 w-1/2 mx-auto">
+        {% include "card_info.html" with title='Name' value=name %}
+      </div>
+      <div class="col-span-1 w-1/2 mx-auto">
+        {% include "card_info.html" with title='Class' value=class %}
+      </div>
+    </div>
+  </div>
 
-<p><strong>Name:</strong> <span class="normal-text">{{name}}</span></p>
-<p><strong>NPM:</strong> <span class="normal-text">{{npm}}</span></p>
-<p><strong>Class:</strong> <span class="normal-text">{{class}}</span></p>
+  <!-- Konten lainnya -->
+  <div class="px-3 mb-4 mt-32">
+    <div class="flex rounded-md items-center bg-indigo-600 py-2 px-4 w-fit">
+      <h1 class="text-white text-center">Last Login: {{last_login}}</h1>
+    </div>
+  </div>
 
-{% if not product_entries %}
-<p>Belum ada data product pada bemostore.</p>
-{% else %}
-<style>
-  table {
-    width: 50%;
-    border-collapse: collapse;
-  }
-  th, td {
-    padding: 8px;
-    text-align: left;
-  }
-  th:first-child, td:first-child {
-    width: 20%; 
-  }
-  th:nth-child(2), td:nth-child(2){
-    width: 10%;
-  }
-  th:last-child, td:last-child {
-    width: 70%; 
-  }
-</style>
+  <div class="flex justify-end mb-6">
+    <a href="{% url 'main:create_product_entry' %}" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">
+      Add New Product
+    </a>
+  </div>
 
-<table>
-  <tr>
-    <th>Product Name</th>
-    <th>Price</th>
-    <th>Description</th>
-  </tr>
-
-  {% comment %} Berikut cara memperlihatkan data product di bawah baris ini 
-  {% endcomment %} 
-  {% for product_entry in product_entries %}
-  <tr>
-    <td>{{product_entry.name}}</td>
-    <td>{{product_entry.price}}</td>
-    <td>{{product_entry.description}}</td>
-  </tr>
-  {% endfor %}
-</table>
-
-{% endif %}
-
-<br />
-
-<a href="{% url 'main:create_product_entry' %}">
-  <button>Add New Product Entry</button>
-</a>
-
-<a href="{% url 'main:logout' %}">
-  <button>Logout</button>
-</a>
-<h5>Sesi terakhir login: {{ last_login }}</h5>
+  {% if not product_entries %}
+  <div class="flex flex-col items-center justify-center min-h-[24rem] p-6">
+    <img src="{% static 'image/sedih-banget.png' %}" alt="Sad face" class="w-32 h-32 mb-4"/>
+    <p class="text-center text-gray-600 mt-4">Belum ada data produk pada bemostore.</p>
+  </div>
+  {% else %}
+  <div class="columns-1 sm:columns-2 lg:columns-3 gap-6 space-y-6 w-full">
+    {% for product_entry in product_entries %}
+      {% include 'card_product.html' with product_entry=product_entry %}
+    {% endfor %}
+  </div>
+  {% endif %}
+</div>
 
 {% endblock content %}
