--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -86,12 +86,13 @@
             display: none;
         }
     </style>
+    
 </head>
 <body>
     <div class="navbar">
         <div class="logo">
             <img src="{% static 'image/FWPae6p.png' %}" alt="Logo" class="logo-image"> <!-- Path yang sudah diperbaiki -->
-            bemostore
+            <span class="bemostore-text">bemostore</span> <!-- Teks dengan font Xenia Cameo -->
         </div>
         <div class="hamburger"><i class="fas fa-bars"></i></div>
         <div class="menu">
