--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -33,16 +33,16 @@
 
   <!-- Konten lainnya -->
   <div class="px-3 mb-4 mt-16 md:mt-32"> <!-- Mengurangi margin atas di mobile -->
-    <div class="flex rounded-md items-center bg-indigo-600 py-2 px-4 w-fit">
+    <div class="flex rounded-md items-center bg-gray-600 py-2 px-4 w-fit">
       <h1 class="text-white text-center">Last Login: {{last_login}}</h1>
     </div>
   </div>
 
   <div class="flex justify-end mb-6">
-  <a href="{% url 'main:create_product_entry' %}" class="bg-indigo-400 hover:bg-indigo-400 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105 mx-4 ">
+  <a href="{% url 'main:create_product_entry' %}" class="bg-blue-400 hover:bg-blue-400 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105 mx-4 ">
       Add New Product
   </a>
-  <button data-modal-target="crudModal" data-modal-toggle="crudModal" class="btn bg-indigo-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105" onclick="showModal();">
+  <button data-modal-target="crudModal" data-modal-toggle="crudModal" class="btn bg-blue-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105" onclick="showModal();">
     Add New Product by AJAX
   </button>
   </div>
