--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,7 @@
             font-family: Arial, Helvetica, sans-serif;
         }
         .navbar {
-            background-color: #1b58bb;
+            background-color: #535353;
             overflow: hidden;
             display: flex;
             justify-content: space-between;
