--- a/main/templates/create_product_entry.html
+++ b/main/templates/create_product_entry.html
@@ -39,7 +39,7 @@
           </div>
         {% endfor %}
         <div class="flex justify-center mt-6">
-          <button type="submit" class="bg-indigo-600 text-white font-semibold px-6 py-3 rounded-lg hover:bg-indigo-700 transition duration-300 ease-in-out w-full">
+          <button type="submit" class="bg-slate-700 text-white font-semibold px-6 py-3 rounded-lg hover:bg-slate-700 transition duration-300 ease-in-out w-full">
             Create Product Entry
           </button>
         </div>
