--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -39,10 +39,10 @@
   </div>
 
   <div class="flex justify-end mb-6">
-  <a href="{% url 'main:create_product_entry' %}" class="bg-blue-400 hover:bg-blue-400 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105 mx-4 ">
+  <a href="{% url 'main:create_product_entry' %}" class="bg-neutral-700 hover:bg-slate-600 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105 mx-4 ">
       Add New Product
   </a>
-  <button data-modal-target="crudModal" data-modal-toggle="crudModal" class="btn bg-blue-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105" onclick="showModal();">
+  <button data-modal-target="crudModal" data-modal-toggle="crudModal" class="btn bg-neutral-900 hover:bg-slate-600 text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105" onclick="showModal();">
     Add New Product by AJAX
   </button>
   </div>
@@ -81,7 +81,7 @@
       <!-- Modal footer -->
       <div class="flex flex-col space-y-2 md:flex-row md:space-y-0 md:space-x-2 p-6 border-t border-gray-200 rounded-b justify-center md:justify-end">
         <button type="button" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg" id="cancelButton">Cancel</button>
-        <button type="submit" id="submitProductEntry" form="productEntryForm" class="bg-indigo-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg">Save</button>
+        <button type="submit" id="submitProductEntry" form="productEntryForm" class="bg-slate-700 hover:bg-slate-700 text-white font-bold py-2 px-4 rounded-lg">Save</button>
       </div>
     </div>
   </div>
@@ -124,8 +124,8 @@
           const description = DOMPurify.sanitize(item.fields.description);
             htmlString += `
             <div class="relative break-inside-avoid max-w-lg mx-auto">
-                <div class="relative top-5 bg-indigo-100 shadow-md rounded-lg mb-6 flex flex-col border-2 border-indigo-300 p-6 transition-transform duration-300">
-                    <div class="bg-indigo-200 text-gray-800 p-4 rounded-t-lg border-b-2 border-indigo-300">
+                <div class="relative top-5 bg-gray-400 shadow-md rounded-lg mb-6 flex flex-col border-2 border-gray-300 p-6 transition-transform duration-300">
+                    <div class="bg-gray-500 text-gray-800 p-4 rounded-t-lg border-b-2 border-gray-300">
                         <h3 class="font-bold text-2xl mb-2">${name}</h3> 
                         <p class="text-gray-600">Created by: {{name}}</p> 
                     </div>
@@ -134,7 +134,7 @@
                         <p class="text-gray-700 text-lg mb-4">${description}</p>
                     </div>
                     <div class="flex justify-between mt-6">
-                        <a href="/edit-product/${item.pk}" class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded-lg w-full mr-2 text-center transition duration-300">
+                        <a href="/edit-product/${item.pk}" class="bg-slate-700 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded-lg w-full mr-2 text-center transition duration-300">
                             Edit Product
                         </a>
                         <a href="/delete-product/${item.pk}" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-lg w-full ml-2 text-center transition duration-300">
